# catslang

./: .gitignore  Cargo.toml  README.md
crates/cattails/: Cargo.toml  README.md  test.sql
crates/cattails/src/: completion.rs  main.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: ast.rs  eval.rs  lexer.rs  main.rs  object.rs  parser.rs  token.rs
