[package]
name = "meow"
version = "0.1.0"
edition = "2021"
description = "Forive me, I'm learning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
pretty_assertions = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
